--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@magiclabs/ui": "^0.27.4",
     "@tremor/react": "^3.17.4",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.5",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.24.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -45,6 +47,6 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.4"
   }
 }
