--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
